Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19185

Assertion `select_lex->select_number == (0x7fffffff * 2U + 1U) || select_lex->select_number == 0x7fffffff || !output || !output->get_select(select_lex->select_number) || output->get_select(select_lex->select_number)->select_lex == select_lex' failed

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.4(EOL)
    • 10.4.4
    • Optimizer
    • None

    Description

      set optimizer_switch="condition_pushdown_from_having=on";
       
      create table t1 (pk int not null primary key, c1 varchar(64));
      insert into t1 values (1,'bbb'),(2,'aaa'),(3,'ccc'),(4,	'ddd'),(5,'s'),(7,'c'),(6,'kkk'),(9,'ert'),(8,'s'),(12,'www');
      create view v1 as select * from t1;
       
      select pk from t1 group by  pk 
      having (1 not in (select count(t1.c1) from (v1, t1)));
      

      10.4 5da6944ea3a592efefd1adc33

      mysqld: /10.4/sql/sql_select.cc:4102: bool JOIN::save_explain_data(Explain_query*, bool, bool, bool, bool): Assertion `select_lex->select_number == (0x7fffffff * 2U + 1U) || select_lex->select_number == 0x7fffffff || !output || !output->get_select(select_lex->select_number) || output->get_select(select_lex->select_number)->select_lex == select_lex' failed.
       
      stdlib/abort.c:91(__GI_abort)[0x7f98fa40902a]
      assert/assert.c:92(__assert_fail_base)[0x7f98fa3ffbd7]
      /lib/x86_64-linux-gnu/libc.so.6(+0x2dc82)[0x7f98fa3ffc82]
      sql/sql_select.cc:4104(JOIN::save_explain_data(Explain_query*, bool, bool, bool, bool))[0x558197a99dd1]
      sql/sql_select.cc:1514(JOIN::build_explain())[0x558197a809b4]
      sql/sql_select.cc:1567(JOIN::optimize())[0x558197a81278]
      sql/sql_lex.cc:4151(st_select_lex::optimize_unflattened_subqueries(bool))[0x5581979828ca]
      sql/opt_subselect.cc:5382(JOIN::optimize_unflattened_subqueries())[0x558197e26015]
      sql/sql_select.cc:2743(JOIN::optimize_stage2())[0x558197a8ca0f]
      sql/sql_select.cc:2207(JOIN::optimize_inner())[0x558197a87154]
      sql/sql_select.cc:1561(JOIN::optimize())[0x558197a811c9]
      sql/sql_select.cc:4578(mysql_select(THD*, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*))[0x558197a9e0f5]
      sql/sql_select.cc:424(handle_select(THD*, LEX*, select_result*, unsigned long))[0x558197a7525c]
      sql/sql_parse.cc:6602(execute_sqlcom_select(THD*, TABLE_LIST*))[0x5581979fa653]
      sql/sql_parse.cc:3891(mysql_execute_command(THD*))[0x5581979e7870]
      sql/sql_parse.cc:8154(mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool))[0x558197a02914]
      sql/sql_parse.cc:1834(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool))[0x5581979db5c4]
      sql/sql_parse.cc:1365(do_command(THD*))[0x5581979d8503]
      sql/sql_connect.cc:1398(do_handle_one_connection(CONNECT*))[0x558197d4bf97]
      sql/sql_connect.cc:1302(handle_one_connection)[0x558197d4b961]
      perfschema/pfs.cc:1864(pfs_spawn_thread)[0x558199104f0f]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x76ba)[0x7f98fb2486ba]
      x86_64/clone.S:111(clone)[0x7f98fa4d941d]
      

      Attachments

        Activity

          People

            allen.herrera Allen Herrera
            alice Alice Sherepa
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 3h
                3h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.